--- a/default.hbs
+++ b/default.hbs
@@ -13,6 +13,7 @@
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "built/bulma.css"}}"/>
+    <link rel="stylesheet" type="text/css" href="{{asset "built/themes.css"}}"/>
 
     {{!-- This tag outputs SEO meta+structured data and other important settings --}}
     {{ghost_head}}
