--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -1,7 +1,21 @@
+<div class="site-nav">
+    <div class="site-title">
+        <h1 class="title">{{@site.title}}</h1>
+        <h2 class="sub-title">{{@site.description}}</h2>
+    </div>
 
+    <div class="site-aside">
+        <aside class="menu">
+            {{#if @site.navigation}}
+                {{navigation}}
+            {{/if}}
+        </aside>
+    </div>
 
-<aside class="menu">
-    {{#if @site.navigation}}
-        {{navigation}}
-    {{/if}}
-</aside>
+    <div class="site-user">
+        <figure class="image is-128x128">
+            <img src="">
+        </figure>
+    </div>
+</div>
+
