--- a/assets/built/themes.css
+++ b/assets/built/themes.css
@@ -1,2 +1,2 @@
-body{background:#f5f7f9}.site-nav{background:#fff}.site-nav .site-title{text-align:center;background:#222;color:#fff;padding-top:32px;padding-bottom:32px}.site-nav .site-title .title{color:#fff}.site-nav .site-aside{padding-top:16px;padding-bottom:16px}
+body{background:#f5f7f9}.site-nav .site-title{text-align:center;background:#222;color:#fff;padding-top:32px;padding-bottom:32px}.site-nav .site-title .title{color:#fff}.site-nav .site-aside{padding-top:16px;padding-bottom:16px;background:#fff}.site-nav .site-user{background:#fff;margin:16px 0;padding:32px 16px}.site-nav .site-user .author-name{font-size:16px;font-weight:700;color:#222;margin:8px 0 4px}.site-nav .site-user .author-bio{font-size:13px;font-weight:400;color:#555}
 /*# sourceMappingURL=themes.css.map */
