--- a/default.hbs
+++ b/default.hbs
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{!-- Styles'n'Scripts --}}
+    <link rel="stylesheet" type="text/css" href="{{asset "/fontawesome5/css/all.min.css"}}"/>
     <link rel="stylesheet" type="text/css" href="{{asset "built/bulma.css"}}"/>
     <link rel="stylesheet" type="text/css" href="{{asset "built/themes.css"}}"/>
 
@@ -77,6 +78,7 @@
     <script type="text/javascript" src="{{asset "built/jquery.fitvids.js"}}"></script>
 
     <script src="{{asset "built/infinitescroll.js"}}"></script>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
     {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
     {{{block "scripts"}}}
