--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -12,10 +12,36 @@
         </aside>
     </div>
 
-    <div class="site-user">
-        <figure class="image is-128x128">
-            <img src="">
+    {{!-- 用户信息 --}}
+    <div class="site-user has-text-centered">
+        <figure class="image is-128x128 is-inline-block">
+              <img  src="https://bulma.io/images/placeholders/128x128.png">
         </figure>
+        <div class="author-name">
+            <span>cmlanche</span>
+        </div>
+        <div class="author-bio">
+            <span>中的“可视对比工具”和“合并工具”中选择Beyond Compare，但是退出却警告找不到bcomp的命令，而几个命令输入框也是disable的，安装了Beyond Compare之后还是找不到bcomp，在这个应用下找到了这个可执行文件，配置环境变量也总是未能成功。</span>
+        </div>
+    </div>
+
+    {{!-- 工具栏 --}}
+    <div class="site-tools">
+        <span class="icon has-text-info is-large">
+              <i class="fab fa-weixin fa-lg"></i>
+        </span>
+        <span class="icon has-text-info is-large">
+              <i class="fab fa-weibo fa-lg"></i>
+        </span>
+        <span class="icon has-text-info is-large">
+              <i class="fab fa-twitter fa-lg"></i>
+        </span>
+        <span class="icon has-text-info is-large">
+              <i class="fab fa-facebook fa-lg"></i>
+        </span>
+        <span class="icon has-text-info is-large">
+              <i class="fas fa-blog fa-lg"></i>
+        </span>
     </div>
 </div>
 
