--- a/post.hbs
+++ b/post.hbs
@@ -32,16 +32,29 @@
 
         {{!-- 右侧主题栏 --}}
         <div class="column">
-            <div class="post">
-                <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
+            <div class="{{post_class}}">
+                <article class="post-full {{#unless feature_image}}no-image{{/unless}}">
 
                     <header class="post-full-header has-text-centered">
                         <h1 class="title">{{title}}</h1>
-                        <section class="post-full-meta">
-                            <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMMM YYYY"}}</time>
-                            {{#primary_tag}}
-                                <span class="date-divider">/</span> <a href="{{url}}">{{name}}</a>
-                            {{/primary_tag}}
+                        <section class="post-meta">
+                            {{!-- 写作时间 --}}
+                            <span class="icon">
+                            <i class="fas fa-calendar-day"></i>
+                            </span>
+                            <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="YYYY年MM月D日 "}}</time>
+                            {{!-- 阅读需要的时间 --}}
+                            <span class="icon">
+                            <i class="far fa-clock"></i>
+                            </span>
+                            <span>{{reading_time}}</span>
+                            {{!-- 标签 --}}
+                            {{#if primary_tag}}
+                                <span class="icon">
+                                    <i class="fas fa-tags"></i>
+                                </span>
+                                <span class="post-card-tags">{{primary_tag.name}}</span>
+                            {{/if}}
                         </section>
                     </header>
 
