--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -13,7 +13,7 @@
     </div>
 
     <div id="sticky-part">
-        {{#is "index, tag"}}
+        {{#is "index, tag, author"}}
         <div class="site-user has-text-centered">
             {{#if @site.logo}}
             <figure class="image is-128x128 is-inline-block">
