--- a/author.hbs
+++ b/author.hbs
@@ -86,6 +86,8 @@
                     {{> "post-card"}}
                 {{/foreach}}
             </div>
+
+            {{> footer}}
         </div>
     </div>
 </div>
