--- a/tag.hbs
+++ b/tag.hbs
@@ -27,6 +27,9 @@
                     {{> "post-card"}}
                 {{/foreach}}
             </div>
+
+            {{> footer}}
         </div>
+
     </div>
 </div>
