--- a/index.hbs
+++ b/index.hbs
@@ -21,6 +21,8 @@ into the {body} of the default.hbs template --}}
 
                 {{/foreach}}
             </div>
+
+            {{> footer}}
         </div>
     </div>
     
