update copyright icon

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,7 +2,7 @@
   <div class="content has-text-centered">
     <p>
         <span class="icon">
-            <i class="fas fa-copyright"></i>
+            <i class="far fa-copyright"></i>
         </span>
         <span>2019</span> 
         <span class="icon">
