移动端自适应，移动端情况下隐藏部分工具栏

--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -142,3 +142,14 @@ body {
     color: #999999;
     font-size: 13px;
 }
+
+/* 移动端适配 */
+@media (max-width: 768px) {
+    .sticky-wrapper {
+        display: none;
+    }
+
+    .post .post-full-content {
+        padding: 0 8px;;
+    }
+}
