--- a/post.hbs
+++ b/post.hbs
@@ -62,11 +62,9 @@
                     <figure class="post-full-image">
                         {{!-- This is a responsive image, it loads different sizes depending on device
                         https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-                        <img
-                            srcset="{{img_url feature_image size="s"}} 300w,
-                                    {{img_url feature_image size="m"}} 600w,
-                                    {{img_url feature_image size="l"}} 1000w,
-                                    {{img_url feature_image size="xl"}} 2000w"
+                        <img srcset="{{img_url feature_image size="m"}} 769w,
+                                    {{img_url feature_image size="l"}} 1024w,
+                                    {{img_url feature_image size="xl"}} 1408w"
                             src="{{img_url feature_image size="xl"}}"
                             alt="{{title}}"
                         />
