--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -1,25 +1,20 @@
-html {
-    overflow-x: hidden;
-    overflow-y: scroll;
-    font-size: 62.5%;
-
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
 body {
-    overflow-x: hidden;
-    color: color(var(--midgrey) l(-25%));
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 1.5rem;
-    line-height: 1.6em;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0;
-    text-rendering: optimizeLegibility;
     background: #f5f7f9;
-
+    box-sizing:border-box;
+    -moz-box-sizing:border-box; /* Firefox */
+    -webkit-box-sizing:border-box; /* Safari */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -moz-font-feature-settings: "liga" on;
+    -webkit-overflow-scrolling: touch;
+}
+
+.container {
+    overflow: hidden;
+}
+
+.site-wrapper {
+    
 }
 
 /* 左侧导航栏 */
@@ -172,8 +167,29 @@ body {
     font-size: 13px;
 }
 
+.post-feed {
+    background: white;
+}
+
 /* 移动端适配 */
 @media (max-width: 768px) {
+    .post-card{
+        padding-top: 32px;
+    }
+
+    .post-card .post-card-header {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .post-card .post-card-header .post-card-title {
+        font-size: 18px;
+    }
+
+    .post-card .post-card-content .post-card-excerpt{
+        margin: 0;
+    }
+
     .sticky-wrapper {
         display: none;
     }
@@ -184,5 +200,9 @@ body {
 
     .post .post-full-content {
         padding: 0 8px;;
+    }
+
+    .post .post-full .post-full-header .title {
+        font-size: 18px;
     }
 }
