--- a/default.hbs
+++ b/default.hbs
@@ -9,7 +9,7 @@
     {{!-- Base Meta --}}
     <title>{{meta_title}}</title>
     <meta name="HandheldFriendly" content="True" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "/fontawesome5/css/all.min.css"}}"/>
@@ -65,8 +65,6 @@
     </script>
     <script type="text/javascript" src="{{asset "built/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "built/jquery.sticky.js"}}"></script>
-
-    <script src="{{asset "built/infinitescroll.js"}}"></script>
 
     {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
     {{{block "scripts"}}}
