--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -178,8 +178,8 @@ body {
     }
 
     .post-card .post-card-header {
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 16px;
+        margin-right: 16px;
     }
 
     .post-card .post-card-header .post-card-title {
@@ -187,7 +187,7 @@ body {
     }
 
     .post-card .post-card-content .post-card-excerpt{
-        margin: 0;
+        margin: 0 16px;
     }
 
     .sticky-wrapper {
@@ -199,10 +199,16 @@ body {
     }
 
     .post .post-full-content {
-        padding: 0 8px;;
+        padding: 0 8px;
+        margin-left: 8px;
+        margin-right: 8px;
     }
 
     .post .post-full .post-full-header .title {
         font-size: 18px;
+    }
+
+    .post .post-full .post-full-footer {
+        padding: 0 24px;
     }
 }
