--- a/index.hbs
+++ b/index.hbs
@@ -20,6 +20,12 @@ into the {body} of the default.hbs template --}}
                     {{> "post-card"}}
 
                 {{/foreach}}
+
+                <hr>
+
+                <div class="pagination-wrapper">
+                {{pagination}}
+                </div>
             </div>
 
             {{> footer}}
