--- a/tag.hbs
+++ b/tag.hbs
@@ -26,6 +26,10 @@
                     {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
                     {{> "post-card"}}
                 {{/foreach}}
+
+                <div class="pagination-wrapper">
+                {{pagination}}
+                </div>
             </div>
 
             {{> footer}}
